; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event_intel_uncore.c_uncore_put_constraint.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event_intel_uncore.c_uncore_put_constraint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_uncore_box = type { %struct.intel_uncore_extra_reg* }
%struct.intel_uncore_extra_reg = type { i32 }
%struct.perf_event = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.hw_perf_event_extra }
%struct.hw_perf_event_extra = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_uncore_box*, %struct.perf_event*)* @uncore_put_constraint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uncore_put_constraint(%struct.intel_uncore_box* %0, %struct.perf_event* %1) #0 {
  %3 = alloca %struct.intel_uncore_box*, align 8
  %4 = alloca %struct.perf_event*, align 8
  %5 = alloca %struct.intel_uncore_extra_reg*, align 8
  %6 = alloca %struct.hw_perf_event_extra*, align 8
  store %struct.intel_uncore_box* %0, %struct.intel_uncore_box** %3, align 8
  store %struct.perf_event* %1, %struct.perf_event** %4, align 8
  %7 = load %struct.perf_event*, %struct.perf_event** %4, align 8
  %8 = getelementptr inbounds %struct.perf_event, %struct.perf_event* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store %struct.hw_perf_event_extra* %9, %struct.hw_perf_event_extra** %6, align 8
  %10 = load %struct.intel_uncore_box*, %struct.intel_uncore_box** %3, align 8
  %11 = call i64 @uncore_box_is_fake(%struct.intel_uncore_box* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %2
  %14 = load %struct.hw_perf_event_extra*, %struct.hw_perf_event_extra** %6, align 8
  %15 = getelementptr inbounds %struct.hw_perf_event_extra, %struct.hw_perf_event_extra* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %13, %2
  br label %32

19:                                               ; preds = %13
  %20 = load %struct.intel_uncore_box*, %struct.intel_uncore_box** %3, align 8
  %21 = getelementptr inbounds %struct.intel_uncore_box, %struct.intel_uncore_box* %20, i32 0, i32 0
  %22 = load %struct.intel_uncore_extra_reg*, %struct.intel_uncore_extra_reg** %21, align 8
  %23 = load %struct.hw_perf_event_extra*, %struct.hw_perf_event_extra** %6, align 8
  %24 = getelementptr inbounds %struct.hw_perf_event_extra, %struct.hw_perf_event_extra* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = getelementptr inbounds %struct.intel_uncore_extra_reg, %struct.intel_uncore_extra_reg* %22, i64 %25
  store %struct.intel_uncore_extra_reg* %26, %struct.intel_uncore_extra_reg** %5, align 8
  %27 = load %struct.intel_uncore_extra_reg*, %struct.intel_uncore_extra_reg** %5, align 8
  %28 = getelementptr inbounds %struct.intel_uncore_extra_reg, %struct.intel_uncore_extra_reg* %27, i32 0, i32 0
  %29 = call i32 @atomic_dec(i32* %28)
  %30 = load %struct.hw_perf_event_extra*, %struct.hw_perf_event_extra** %6, align 8
  %31 = getelementptr inbounds %struct.hw_perf_event_extra, %struct.hw_perf_event_extra* %30, i32 0, i32 1
  store i64 0, i64* %31, align 8
  br label %32

32:                                               ; preds = %19, %18
  ret void
}

declare dso_local i64 @uncore_box_is_fake(%struct.intel_uncore_box*) #1

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
